--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,32 @@
 #root {
   max-width: 1280px;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   font-family: "Plush-Regular", Courier, monospace;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .logo {
   display: flex;
-  font-size: 10rem;
+  justify-content: center;
   margin: 0 0 3rem 0;
+  font-size: clamp(1rem, 6vw, 5rem);
+}
+
+h1 {
+  margin: 0;
+  flex-grow: 1;
 }
 
 .buttons {
   display: flex;
   gap: 2rem;
   justify-content: center;
+  font-size: calc(0.7rem + 1vw);
 }
 
 @font-face {
