--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,40 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media only screen and (min-width: 767px) {
+  .cursor {
+    z-index: 999;
+    position: fixed;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    pointer-events: none;
+    box-shadow: 0 0 20px #535bf2, 0 0 60px #535bf2 0 0 100px #535bf2;
+    animation: colors 10s infinite;
+    transform: translate(-50%, -50%);
+  }
+
+  @keyframes colors {
+    0% {
+      filter: hue-rotate(0deg);
+    }
+    100% {
+      filter: hue-rotate(360deg);
+    }
+  }
+  .cursor:before {
+    content: "";
+    position: absolute;
+    background: #535bf2;
+    filter: blur(10px);
+    width: 30px;
+    height: 30px;
+    opacity: 0.5;
+    transform: translate(-30%, -30%);
+    border-radius: 100%;
+  }
+}
+
 a {
   font-weight: 500;
   color: #646cff;
