--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   height: 100vh;
   margin: 0 auto;
   text-align: center;
-  font-family: "Plush-Regular", Courier, monospace;
+  font-family: "Mirador-BoldDEMO", Arial, monospace;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,6 +20,8 @@
 h1 {
   margin: 0;
   flex-grow: 1;
+  user-select: none;
+  color: #586731;
 }
 
 .buttons {
@@ -29,7 +31,11 @@ h1 {
   font-size: calc(0.7rem + 1vw);
 }
 
+button:hover {
+  background-color: #cea6a9;
+}
+
 @font-face {
-  font-family: "Plush-Regular";
-  src: url("./assets/font/Plush-Regular.ttf");
+  font-family: "Mirador-BoldDEMO";
+  src: url("./assets/font/Mirador-BoldDEMO.otf");
 }
